# slurm-watchdog

./: .gitignore  LICENSE  README.md  pyproject.toml
src/slurm_watchdog/: __init__.py  __main__.py  analyzer.py  config.py  database.py  hermes_report.py  models.py  notifier.py  qqbot.py  qqbot_server.py  systemd.py  watcher.py
src/slurm_watchdog/tests/: __init__.py
tests/: test_config.py  test_database.py  test_notifier.py  test_qqbot.py  test_watcher.py
